# pseudo_interpreter

./: Cargo.toml  README.md  code.ps  todo.txt
codes/: code.ps
src/: lib.rs  main.rs
src/constants/: error_handler.rs  keywords.rs  mod.rs
src/evaluator/: eval_result.rs  evaluator.rs  mod.rs
src/evaluator/functions/: arithmetics.rs  comparison.rs  eval_array.rs  eval_declare.rs  eval_for.rs  eval_function.rs  eval_if.rs  eval_multi_condition.rs  eval_statement.rs  eval_while.rs  expression.rs  func_call.rs
src/expressions/: mod.rs
src/lexer/: expr.rs  lexer.rs  mod.rs  operator.rs  statement.rs  token.rs
src/lexer/enums/: expr.rs  operator.rs  statement.rs  token.rs
src/lexer/functions/: comparison.rs  datatypes.rs  identifier.rs  operator.rs
src/operator/: mod.rs
src/parser/: arithmetic.rs  mod.rs  parser.rs
src/parser/functions/: assignment.rs  comparison.rs  factor_term.rs  parse_array.rs  parse_declare.rs  parse_for.rs  parse_function.rs  parse_if.rs  parse_input.rs  parse_token.rs  parse_while.rs  print_expr.rs  token.rs
src/tokens/: lexer.rs  token.rs
tests/: function_test.rs  ifelse_test.rs  while_test.rs
tests/test_codes/forloop/: stepneg.ps
tests/test_codes/functions/: arg_func.ps  function.ps  noname.ps  unmatch_arg.ps
tests/test_codes/ifelse/: ifnot.ps
tests/test_codes/whileloop/: basic.ps  nestedif.ps
