[package]
name = "pseudo_interpreter"
version = "1.2.0"
edition = "2021"
authors = ["Prince Mbeah Essilfie <mbeahessilfieprince@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Pseudocode interpreter"
readme = "README.md"
homepage = "https://github.com/Kratosgado/pseudo_interpreter"
repository = "https://github.com/Kratosgado/pseudo_interpreter"
keywords = ["interpreter", "pseudocode"]
categories = ["Development tools", "Programming language"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
